[gd_scene load_steps=11 format=2]

[ext_resource path="res://game/base.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=2]
[ext_resource path="res://title_screen/Fonts/miltown/Miltown2/MLTWNII_.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://title_screen/Fonts/vt323_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://samples/musicas/THEME.ogg" type="AudioStream" id=5]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://fade_in/FadeIn.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )

[node name="menu" instance=ExtResource( 1 )]
pause_mode = 2
visible = false
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Label" type="Label" parent="." index="1"]
margin_left = 427.311
margin_top = 172.581
margin_right = 925.311
margin_bottom = 242.581
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.243137, 1 )
text = "system pause__"

[node name="Screen" parent="." index="2"]
margin_left = -2.7207
margin_top = -1.36038
margin_right = -2.7207
margin_bottom = -1.36035

[node name="Options" parent="Screen" index="0"]
margin_left = 525.0
margin_right = 755.0

[node name="NewGame" parent="Screen/Options" index="0"]
margin_right = 230.0
rect_min_size = Vector2( 230, 55 )
custom_styles/focus = SubResource( 2 )
text = ""
script = null

[node name="text" type="Label" parent="Screen/Options/NewGame" index="0"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.521569, 0.0980392, 1 )
text = "  >RESUME"

[node name="Back" parent="Screen/Options" index="1"]
margin_right = 230.0
rect_min_size = Vector2( 230, 55 )
custom_styles/focus = SubResource( 3 )
text = ""

[node name="text" type="Label" parent="Screen/Options/Back" index="0"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.521569, 0.0980392, 1 )
text = "  cd TITLE"

[node name="music" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 5 )

[node name="FadeIn" parent="." index="4" instance=ExtResource( 6 )]
visible = false
script = ExtResource( 7 )
[connection signal="focus_entered" from="Screen/Options/NewGame" to="." method="_on_NewGame_focus_entered"]
[connection signal="focus_exited" from="Screen/Options/NewGame" to="." method="_on_NewGame_focus_exited"]
[connection signal="mouse_entered" from="Screen/Options/NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="mouse_exited" from="Screen/Options/NewGame" to="." method="_on_NewGame_mouse_exited"]
[connection signal="pressed" from="Screen/Options/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="focus_entered" from="Screen/Options/Back" to="." method="_on_Back_focus_entered"]
[connection signal="focus_exited" from="Screen/Options/Back" to="." method="_on_Back_focus_exited"]
[connection signal="mouse_entered" from="Screen/Options/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="Screen/Options/Back" to="." method="_on_Back_mouse_exited"]
[connection signal="pressed" from="Screen/Options/Back" to="." method="_on_Back_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
